Fix overflowing grid images

--- a/src/icp-hackathon-frontend/src/Home/Grid/Grid.scss
+++ b/src/icp-hackathon-frontend/src/Home/Grid/Grid.scss
@@ -21,6 +21,7 @@
 
 	img {
 		height: 11rem;
+		max-width: 100%;
 		border-radius: 0.5rem;
 	}
 
